<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/select_voltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/voltage_output_text"
        android:textColor="@color/my_violet"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/voltage_shevron"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="clip_vertical"
        android:src="@drawable/shevron_down"
        app:layout_constraintBottom_toBottomOf="@id/score_select_voltage"
        app:layout_constraintStart_toEndOf="@id/select_voltage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/score_select_voltage"
        app:tint="@color/my_violet"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintWidth_max="wrap"
        app:layout_constraintWidth_percent="0.6"
        android:contentDescription="@string/openList" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/score_select_voltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/voltage_0_5_ma"
        android:textColor="@color/durty_white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="wrap"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintBottom_toBottomOf="@id/select_voltage"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_change_voltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="constraint_voltage_05, constraint_voltage_420, vetal"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_voltage_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_max="wrap"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_voltage">

        <ImageView
            android:id="@+id/image_volt_05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/voltage_0_5_ma"
            android:src="@drawable/electric_bolt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/sky_blue">

        </ImageView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/select_05_voltage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:fontFamily="sans-serif"
            android:text="@string/voltage_0_5_ma"
            android:textColor="@color/durty_white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_volt_05"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="18dp"
            app:dividerColor="@color/my_violet"
            app:dividerThickness="1dp"
            app:layout_constraintTop_toBottomOf="@id/select_05_voltage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_voltage_420"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_voltage_05">

        <ImageView
            android:id="@+id/image_volt_420"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/voltage_4_20_ma"
            android:src="@drawable/electric_bolt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/coral" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/select_420_voltage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_marginStart="16dp"
            android:text="@string/voltage_4_20_ma"
            android:textColor="@color/durty_white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_volt_420"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/vetal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/VitalyGizatulin"
        android:textColor="@color/durty_white"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_voltage_420"
        tools:ignore="SmallSp" />




</androidx.constraintlayout.widget.ConstraintLayout>